<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <net.skyscanner.backpack.card.BpkCardView
            android:id="@+id/bpkCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="small"
            app:elevationLevel="focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FLIGHTS_CRY" />
            </LinearLayout>
        </net.skyscanner.backpack.card.BpkCardView>

        <!-- title2-->
        <net.skyscanner.backpack.card.BpkCardView
            android:id="@+id/itineraryCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="small"
            app:elevationLevel="focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bpkCardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flight_itinerary" />
            </LinearLayout>
        </net.skyscanner.backpack.card.BpkCardView>

        <!-- Flight code-->
        <net.skyscanner.backpack.card.BpkCardView
            android:id="@+id/codeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="small"
            app:elevationLevel="focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itineraryCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flight_code" />
            </LinearLayout>
        </net.skyscanner.backpack.card.BpkCardView>

    <net.skyscanner.backpack.card.BpkCardView
            android:id="@+id/depatureCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="small"
            app:elevationLevel="focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codeCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_departure" />

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Airport_code" />

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Departure_time" />

            </LinearLayout>
        </net.skyscanner.backpack.card.BpkCardView>


        <!-- Arrival-->
        <net.skyscanner.backpack.card.BpkCardView
            android:id="@+id/arrivalCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="small"
            app:elevationLevel="focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/depatureCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Arival_card" />

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Airport_code" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Atime_card" />

            </LinearLayout>
        </net.skyscanner.backpack.card.BpkCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>









